force-app/main/default/objects/IN_Contact__c/IN_Contact__c.object-meta.xml
<CustomObject>
    <label>IN_Contact_Manual</label>
    <nameField>
        <label>IN_Contact_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IN_Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>