force-app/main/default/objects/IN_Contact__c/fields/addr_State__c.field-meta.xml
<CustomField>
    <fullName>addr_State__c</fullName>
    <label>Addr_State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>