force-app/main/default/objects/IN_Contact__c/fields/br_brandid__c.field-meta.xml
<CustomField>
    <fullName>br_brandid__c</fullName>
    <label>BR_BrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>