force-app/main/default/objects/IN_Contact__c/fields/br_brandname__c.field-meta.xml
<CustomField>
    <fullName>br_brandname__c</fullName>
    <label>BR_BrandName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>