force-app/main/default/objects/IN_Contact__c/fields/br_currbrandname__c.field-meta.xml
<CustomField>
    <fullName>br_currbrandname__c</fullName>
    <label>BR_CurrBrandName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>