force-app/main/default/objects/IN_Contact__c/fields/br_prevbrandid__c.field-meta.xml
<CustomField>
    <fullName>br_prevbrandid__c</fullName>
    <label>BR_PrevBrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>