force-app/main/default/objects/IN_Contact__c/fields/br_relationstatus__c.field-meta.xml
<CustomField>
    <fullName>br_relationstatus__c</fullName>
    <label>BR_RelationStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>