force-app/main/default/objects/IN_Contact__c/fields/Contact_CareGiver__c.field-meta.xml
<CustomField>
    <fullName>Contact_CareGiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact_CareGiver</label>
    <type>Checkbox</type>
</CustomField>