force-app/main/default/objects/IN_Contact__c/fields/contact_email__c.field-meta.xml
<CustomField>
    <fullName>contact_email__c</fullName>
    <label>Contact_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>