force-app/main/default/objects/IN_Contact__c/fields/contact_homephone__c.field-meta.xml
<CustomField>
    <fullName>contact_homephone__c</fullName>
    <label>Contact_HomePhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>