force-app/main/default/objects/IN_Contact__c/fields/contact_masteroptout__c.field-meta.xml
<CustomField>
    <fullName>contact_masteroptout__c</fullName>
    <label>Contact_MasterOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>