force-app/main/default/objects/IN_Contact__c/fields/contact_mobilephone__c.field-meta.xml
<CustomField>
    <fullName>contact_mobilephone__c</fullName>
    <label>Contact_MobilePhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>