force-app/main/default/objects/IN_Contact__c/fields/contact_preferredlanguage__c.field-meta.xml
<CustomField>
    <fullName>contact_preferredlanguage__c</fullName>
    <label>Contact_PreferredLanguage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>