force-app/main/default/objects/IN_Contact__c/fields/cr_campaignname__c.field-meta.xml
<CustomField>
    <fullName>cr_campaignname__c</fullName>
    <label>CR_CampaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>