force-app/main/default/objects/IN_Contact__c/fields/CR_FieldDietician__c.field-meta.xml
<CustomField>
    <fullName>CR_FieldDietician__c</fullName>
    <label>CR_FieldDietician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>