force-app/main/default/objects/IN_Contact__c/fields/CR_FieldDieticianID__c.field-meta.xml
<CustomField>
    <fullName>CR_FieldDieticianID__c</fullName>
    <label>CR_FieldDieticianID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>