force-app/main/default/objects/IN_Contact__c/fields/CR_NseId__c.field-meta.xml
<CustomField>
    <fullName>CR_NseId__c</fullName>
    <label>CR_NseId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>