force-app/main/default/objects/IN_Contact__c/fields/CR_NseName__c.field-meta.xml
<CustomField>
    <fullName>CR_NseName__c</fullName>
    <label>CR_NseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>