force-app/main/default/objects/IN_Contact__c/fields/cr_OrganisationName__c.field-meta.xml
<CustomField>
    <fullName>cr_OrganisationName__c</fullName>
    <label>CR_OrganisationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>