force-app/main/default/objects/IN_Contact__c/fields/cr_promotercode__c.field-meta.xml
<CustomField>
    <fullName>cr_promotercode__c</fullName>
    <label>CR_PromoterCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>