force-app/main/default/objects/IN_Contact__c/validationRules/Valid_MasterOptOut.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_MasterOptOut</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( CONTAINS(&apos;true&apos;, LOWER(contact_masteroptout__c) ), 
CONTAINS(&apos;false&apos;, LOWER(contact_masteroptout__c) ), 
ISBLANK(contact_masteroptout__c) 
) )</errorConditionFormula>
    <errorMessage>Only True,False or blank are allowed</errorMessage>
</ValidationRule>