force-app/main/default/objects/IN_Contact__c/validationRules/Valid_Mobile.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Mobile</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( contact_mobilephone__c ) != 13</errorConditionFormula>
    <errorMessage>Only 13 digits allowed.</errorMessage>
</ValidationRule>