force-app/main/default/objects/IN_Contact__c/validationRules/Valid_SampleRequested.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_SampleRequested</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( CONTAINS(&apos;true&apos;, LOWER(cr_samplerequested__c) ), 
CONTAINS(&apos;false&apos;, LOWER(cr_samplerequested__c) ), 
ISBLANK(cr_samplerequested__c) 
) )</errorConditionFormula>
    <errorMessage>Only True,False or blank are allowed</errorMessage>
</ValidationRule>